--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "antd": "^5.26.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.6.2"
+    "react-router": "^7.6.2",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
